accessor filter UI is behind alpha flag until small bug is fixed

--- a/src/main/webapp/sass/_core.scss
+++ b/src/main/webapp/sass/_core.scss
@@ -103,6 +103,9 @@ a:focus{color:$synapse-blue;}
 		@include synapse-blue-triangles-bg;
 		h3.pageHeaderTitle {
 			color: white;
+			a {
+				color:white;
+			}
 		}
 		.description {
 			color: white;
